--- a/1201.1037/unitBH-4.tex
+++ b/1201.1037/unitBH-4.tex
@@ -39,7 +39,7 @@
 %defs
 %
 \font\ticp=cmcsc10
-\def\subsubsec#1{\noindent{\undertext {#1}}}
+\def\subsubsec#1{\medskip\noindent{\it {#1}}\smallskip}
 \def\undertext#1{$\underline{\smash{\hbox{#1}}}$}
 \def\sq{{\vbox {\hrule height 0.6pt\hbox{\vrule width 0.6pt\hskip 3pt
    \vbox{\vskip 6pt}\hskip 3pt \vrule width 0.6pt}\hrule height 0.6pt}}}
@@ -497,7 +497,7 @@ While difficult to formulate, locality is also hard to modify, and generic alter
 
 These observations indicate that if locality must be modified, there should be some more basic explanation of its validity, and of that of LQFT, as an excellent approximation to a deeper physics.
 
-This paper will explore a possible resolution to these questions where quantum mechanics, suitably generalized,\foot{For comments on such generalization, see \refs{\UQM}.}  is taken  as fundamental, expanding ideas of \ModelsU.  This in particular indicates a Hilbert space description of ``physical degrees of freedom."  Then, at least in regimes where concepts like evolution and spacetime symmetries are good approximations, they are implemented by unitary transformations.  In particular, if locality and unitarity are in conflict, unitarity is assumed fundamental, and thus provides an important {\it constraint} on any possible dynamics.\foot{Note that {\it if} AdS/CFT were to provide a complete resolution of the problems of quantum gravity\GiddingsDR, these and related considerations of this paper may describe aspects of that resolution.}
+This paper will explore a possible resolution to these questions where quantum mechanics, suitably generalized,\foot{For comments on such generalization, see \refs{\UQM}.}  is taken  as fundamental, expanding ideas of \ModelsU.  This in particular indicates a Hilbert space description of ``physical degrees of freedom."  Then, at least in regimes where concepts like evolution and spacetime symmetries are good approximations, they are implemented by unitary transformations.  In particular, if locality and unitarity are in conflict, unitarity is assumed fundamental, and thus provides an important {\it constraint} on any possible dynamics.\foot{Note that {\it if} AdS/CFT were to provide a complete resolution of the problems of quantum gravity \GiddingsDR, these and related considerations of this paper may describe aspects of that resolution.}
 
 In short, the viewpoint taken in this paper is that LQFT in spacetime is simply not the right fundamental picture, but that unitary ``evolution" on Hilbert space is.  One should then examine the consequences of this assumption.
 
@@ -543,11 +543,11 @@ One other consequence of the present approach is that, since evolution is implem
 
 \newsec{Local quantum field theory: Hawking evolution and tensor factorizations}
 
-In order to sharpen these ideas,  this section will give a detailed treatment of Hawking evolution.  While this  is ultimately nonunitary\Hawkunc, its formulation will both illustrate implementation of a more general Hilbert-space description, and set the stage for finding modifications to the evolution that respect unitarity, within such a description.  We begin by updating the derivation of Hawking radiation, based on a treatment of LQFT evolution on a time slicing of a black hole spacetime.
+In order to sharpen these ideas,  this section will give a detailed treatment of Hawking evolution.  While this  is ultimately nonunitary \Hawkunc, its formulation will both illustrate implementation of a more general Hilbert-space description, and set the stage for finding modifications to the evolution that respect unitarity, within such a description.  We begin by updating the derivation of Hawking radiation, based on a treatment of LQFT evolution on a time slicing of a black hole spacetime.
 
 \subsec{Geometry and coordinates}
 
-Consider, in particular, an asymptotically-flat spacetime in which we imagine a black hole forms through a collapse or collision from a pure initial state.  For simplicity we will take the geometry to be spherically symmetric, although there is also much interest in high-energy collisions with less symmetry\refs{\Erice}.  The general spherically-symmetric D-dimensional black hole metric is
+Consider, in particular, an asymptotically-flat spacetime in which we imagine a black hole forms through a collapse or collision from a pure initial state.  For simplicity we will take the geometry to be spherically symmetric, although there is also much interest in high-energy collisions with less symmetry \refs{\Erice}.  The general spherically-symmetric D-dimensional black hole metric is
 %
 \eqn\schmet{ds^2 = -f(r) dt^2 + {dr^2\over f(r)} + r^2 d\Omega^2\ .}
 %
@@ -578,7 +578,7 @@ Then, the future horizon is $X^-=0$, and the resulting expression for the metric
 \eqn\singcurv{X^+X^-=R_0^2\ ,}
 %
  where $R_0$ is a dimension-dependent constant times $R$, and can be determined from formulas in \refs{\GrLa}.
-A particularly simple example of such a black hole geometry is that of the two-dimensional black hole\refs{\WittenYR,\CGHS},
+A particularly simple example of such a black hole geometry is that of the two-dimensional black hole \refs{\WittenYR,\CGHS},
 %
 \eqn\tdsoln{ds^2_{2dBH}= -{dX^+dX^-\over 1-\lambda^2 X^+X^-}\ ,}
 %
@@ -593,7 +593,7 @@ For a black hole formed from infalling matter, the lower portion of the Kruskal 
 
 \subsec{LQFT evolution}
 
-Dynamics in a spacetime is conveniently treated by choosing a time slicing, and this in particular helps us to give a representation of the Hilbert space of states, and decompositions into tensor factors.   The metric in such a slicing takes the ADM form\refs{\ADM},
+Dynamics in a spacetime is conveniently treated by choosing a time slicing, and this in particular helps us to give a representation of the Hilbert space of states, and decompositions into tensor factors.   The metric in such a slicing takes the ADM form \refs{\ADM},
 %
 \eqn\admdec{ds^2=-N^2 dT^2 + g_{ij} (dx^i + N^i dT)(dx^j + N^j dT)}
 %
@@ -628,7 +628,7 @@ It is helpful to have explicit descriptions of slicings for the static black hol
 %
 \eqn\sldef{X^+(X^-+e^{-f'(R)T} X^+) = R_c^2\ ,}
 %
-for a fixed $R_c>0$.  Different slicings are given by different $R_c$.  The case $R_c=0$ gives the Schwarzschild slicing, where the slices never cross the horizon.  For $R_0>R_c>0$ (with $R_0$ as in \singcurv), we get an example of a ``nice slicing\refs{\LPSTU}," which agrees with Schwarzschild time slices at infinity, but in which the slices smoothly enter the horizon, but not the region $r<R_c$, and in particular avoid the singularity.  In the case $R_c>R_0$, the slices intersect the singularity; these were referred to as ``natural slices" in \refs{\NLvC} since they could describe time slices defined by a family of infalling observers.
+for a fixed $R_c>0$.  Different slicings are given by different $R_c$.  The case $R_c=0$ gives the Schwarzschild slicing, where the slices never cross the horizon.  For $R_0>R_c>0$ (with $R_0$ as in \singcurv), we get an example of a ``nice slicing \refs{\LPSTU}," which agrees with Schwarzschild time slices at infinity, but in which the slices smoothly enter the horizon, but not the region $r<R_c$, and in particular avoid the singularity.  In the case $R_c>R_0$, the slices intersect the singularity; these were referred to as ``natural slices" in \refs{\NLvC} since they could describe time slices defined by a family of infalling observers.
 
 For slices like these that respect the radial symmetry of Schwarzschild \schmet, the ADM form of the metric \admdec\ simplifies to
 %
@@ -701,8 +701,8 @@ supported only in the regions $X^-<0$ and $X^->0$, respectively.  Then, these ca
 %
 and these, plus ingoing modes, provide an alternate decomposition \hprod\ of the total Hilbert space.  Again these give just one example of a general choice of wavepacket basis $v_{il}$, ${\hat v}_{il}$, ${\tilde v}_{il}$.
 
-{\it Arbitrary} Fock space states in a product like \hprod\ are not expected to correspond in any simple way to physical states. For example, excitation of two ultraplanckian modes in a small region produces a strong gravitational backreaction.  A proposed quantification of such limitations is the locality bound\refs{\locbd,\GiddingsSJ}.  
-And, a black hole that formed in the far past has been argued to be in a state well-approximated as the Unruh vacuum\refs{\Unr}. This is found by decomposing the modes into those that are in the far past outgoing or ingoing. Then, this state is vacuum with respect to outgoing modes that are positive frequency in Kruskal time, and ingoing modes that are positive frequency in Schwarzschild time. 
+{\it Arbitrary} Fock space states in a product like \hprod\ are not expected to correspond in any simple way to physical states. For example, excitation of two ultraplanckian modes in a small region produces a strong gravitational backreaction.  A proposed quantification of such limitations is the locality bound \refs{\locbd,\GiddingsSJ}.  
+And, a black hole that formed in the far past has been argued to be in a state well-approximated as the Unruh vacuum \refs{\Unr}. This is found by decomposing the modes into those that are in the far past outgoing or ingoing. Then, this state is vacuum with respect to outgoing modes that are positive frequency in Kruskal time, and ingoing modes that are positive frequency in Schwarzschild time. 
 In the two-dimensional (near-horizon) approximation, the Unruh vacuum can thus be represented as 
 %
 \eqn\unrstate{|0\rangle_U = |0\rangle_{x^+} |0\rangle_{X^-}\ .}
@@ -715,7 +715,7 @@ These states evolve via the unitary operator \unitop.   Defining this requires a
 
 For the purposes of describing observations of asymptotic observers, one works in a basis like \vki, constructed using the coordinates $x^-$, ${\hat x}^-$.  These modes are related to the Kruskal modes by a Bogolubov transformation, and in this basis the Unruh vacuum has an infinite number of particles.
 
-The latter  feature is readily understood using a trick due to Wald\refs{\Wal}.\foot{For further details on the relation between the states, see \refs{\GiNe,\SGTrieste,\Jacrev}.}  Positive Kruskal-frequency modes are analytic in the lower-half complex $X^-$ plane.  So, the following functions are positive-frequency
+The latter  feature is readily understood using a trick due to Wald \refs{\Wal}.\foot{For further details on the relation between the states, see \refs{\GiNe,\SGTrieste,\Jacrev}.}  Positive Kruskal-frequency modes are analytic in the lower-half complex $X^-$ plane.  So, the following functions are positive-frequency
 %
 \eqn\cplxmod{\eqalign{u^+_\omega=(X^-)^{-2i\omega/f'(R)}&\propto {\hat v}_\omega + e^{-\beta\omega/2} v^*_\omega\cr
 u^-_\omega=(-X^-)^{2i\omega/f'(R)} &\propto v_\omega+ e^{-\beta\omega/2} {\hat v}^*_\omega\ ,}}
@@ -765,7 +765,7 @@ with
 In a more general basis, the expression in this exponential is non-diagonal, but of a similar form.
 
 Contributions of modes with $\omega_j\gg 1/R$ are exponentially suppressed by the thermal factors, providing an effective cutoff.  
-However, there is still an infinity in \statepack, \sqopvers\ from the range of $a$.  To regulate this, note that for a given $T$, modes with sufficiently large $a$ have wavelength $\ll R$, and are localized a comparably small separation from the horizon.  Indeed, while these modes can have high, even ultraplanckian, energies as seen by an infalling observer, the statement that they are in a {\it paired} state corresponding to $|0\rangle_{X^-}$  means that potentially large interactions between infalling matter and the individual modes cancel between members of a pair\refs{\GiddingsSJ}. So, we rewrite \statepack\ or \sqopvers\ by restricting the range of $a<A(T)$, where $A(T) =  \epsilon(T+kR)/(2\pi)$, and $k(L)$ is chosen in order that modes whose slice distance to the horizon is less than a cutoff value $L$ are not included. 
+However, there is still an infinity in \statepack, \sqopvers\ from the range of $a$.  To regulate this, note that for a given $T$, modes with sufficiently large $a$ have wavelength $\ll R$, and are localized a comparably small separation from the horizon.  Indeed, while these modes can have high, even ultraplanckian, energies as seen by an infalling observer, the statement that they are in a {\it paired} state corresponding to $|0\rangle_{X^-}$  means that potentially large interactions between infalling matter and the individual modes cancel between members of a pair \refs{\GiddingsSJ}. So, we rewrite \statepack\ or \sqopvers\ by restricting the range of $a<A(T)$, where $A(T) =  \epsilon(T+kR)/(2\pi)$, and $k(L)$ is chosen in order that modes whose slice distance to the horizon is less than a cutoff value $L$ are not included. 
 The contribution of the latter modes can be rewritten as $|0\rangle_{A(T)}$, representing the fact that for practical purposes the modes are seen as vacuum; in particular
 %
 \eqn\sqopversc{|0\rangle_{X^-} =\prod_{jl}\prod_a^{A(T)} \left(S |\hat 0\rangle|0\rangle\right)_{jal} |0\rangle_{A(T)}}
@@ -796,7 +796,7 @@ If one neglects backreaction of the Hawking radiation on the geometry, this entr
 %
 \eqn\Tbh{T_{BH}\sim R S_{BH}\ .}
 %
-The large missing information quantifies the violation of unitarity first proposed by Hawking\refs{\Hawkrad,\Hawkunc}.
+The large missing information quantifies the violation of unitarity first proposed by Hawking \refs{\Hawkrad,\Hawkunc}.
 
 
 
@@ -809,11 +809,11 @@ The  state of the Hawking radiation, and specifically the Unruh vacuum, has so f
 On shorter timescales, the mass is essentially constant.  Thus, the localized features of the state, such as the division into modes in a given small interval of space or time, and the state of those modes, appear largely insensitive to this variation.  In particular, the existence of decompositions into tensor factors, such as \hprod, appears valid.  The effect of the changing geometry does alter the space of states and its evolution, for example as seen through appearance of $(N,N^i,g_{ij})$ in \unitop, or its interacting generalizations.  
 And, over scales $\sim T_{BH}$, one expects significant distortion of the state, due to the change in the geometry.
 
-For observations on small portions of a spatial slice through the geometry, or even over large portions in the asymptotic region, one can imagine promoting slice-dependent (thus gauge-dependent) statements into gauge-invariant statements by introduction of extra structure\refs{\GMH} corresponding to a ``reference background,"  or  set of ``local observers."  However, as noted in \QBHB, giving such a gauge-invariant characterization of the entire nice-slice state, over times $\sim T_{BH}$, is problematic.  The reason is that a reference background with sufficient resolving power over an interval of size $T$ on the slice must itself carry an energy $E\roughly> T/R^2$ (corresponding to a minimum of one quantum of wavelength $R$ per time $R$), and so by time $\tbh$ causes an order one perturbation.  
+For observations on small portions of a spatial slice through the geometry, or even over large portions in the asymptotic region, one can imagine promoting slice-dependent (thus gauge-dependent) statements into gauge-invariant statements by introduction of extra structure \refs{\GMH} corresponding to a ``reference background,"  or  set of ``local observers."  However, as noted in \QBHB, giving such a gauge-invariant characterization of the entire nice-slice state, over times $\sim T_{BH}$, is problematic.  The reason is that a reference background with sufficient resolving power over an interval of size $T$ on the slice must itself carry an energy $E\roughly> T/R^2$ (corresponding to a minimum of one quantum of wavelength $R$ per time $R$), and so by time $\tbh$ causes an order one perturbation.  
 
-One can try to ignore this, and attempt an ADM quantization on the nice slices.  In particular, this leads to a generalization of \unitop\ including interacting perturbations corresponding to gravitational fluctuations\QBHB. A first problem in this is specifying a gauge condition on the slices that yields well-defined evolution, once perturbations away from the metric \schmet\ become important.  In-depth treatment of such quantization is left for further work, but general features appear.  First, as was argued in \QBHB, it appears that such a perturbative quantization becomes problematic, by times $\sim\tbh$, due to gravitational coupling between the fluctuations.  If, as argued there, this indeed represents a breakdown of any perturbative derivation of the late-time nice slice state, there is no sharp calculation of the missing information.  Indeed, a similar but simpler context to explore perturbative ADM quantization of a curved geometry is in inflationary cosmology; here one has more symmetry.  Interestingly, one also finds an apparently related breakdown of perturbative quantization there\refs{\QBHB,\GiSl}\foot{For a different, but likely connected story, see \refs{\nimatalk\ArkaniHamedKY-\DVS}.}
+One can try to ignore this, and attempt an ADM quantization on the nice slices.  In particular, this leads to a generalization of \unitop\ including interacting perturbations corresponding to gravitational fluctuations\QBHB. A first problem in this is specifying a gauge condition on the slices that yields well-defined evolution, once perturbations away from the metric \schmet\ become important.  In-depth treatment of such quantization is left for further work, but general features appear.  First, as was argued in \QBHB, it appears that such a perturbative quantization becomes problematic, by times $\sim\tbh$, due to gravitational coupling between the fluctuations.  If, as argued there, this indeed represents a breakdown of any perturbative derivation of the late-time nice slice state, there is no sharp calculation of the missing information.  Indeed, a similar but simpler context to explore perturbative ADM quantization of a curved geometry is in inflationary cosmology; here one has more symmetry.  Interestingly, one also finds an apparently related breakdown of perturbative quantization there \refs{\QBHB,\GiSl}\foot{For a different, but likely connected story, see \refs{\nimatalk\ArkaniHamedKY-\DVS}.}
 
-In short, a proposed\QBHB\ resolution to the ``information paradox" is that the nice-slice state does not accurately describe the quantum state of a black hole at long times.  In particular, 
+In short, a proposed \QBHB\ resolution to the ``information paradox" is that the nice-slice state does not accurately describe the quantum state of a black hole at long times.  In particular, 
 it appears that we do not have a gauge-invariant and perturbatively-sound sharp calculation of the missing information, past the time $\tbh$, and if there is no such calculation, there is no sharp paradox.
 
 Such a resolution does not yet offer the full story, however, as one needs a more complete description of the correct, presumably unitary, evolution.  Apparently this must involve both a modification of the LQFT description of the nice slice state, and of its evolution via \unitop.  We seek a set of principles governing such evolution.
@@ -829,7 +829,7 @@ In investigating such possible principles, this paper will assume some basic str
 
 The von Neumann entropy of the Hawking state, \vN, describes the information missing from the external state.  This grows with time as sketched in \entropfig. If the black hole disappears completely at the end of this evaporation, the final entropy, $S(T_{BH})\sim S_{BH}$, quantifies the non-unitarity of the evolution.  While unitary evolution would be possible if this information remained in a black hole remnant, that scenario also appears ruled out (see {\it e.g.}  \refs{ \wabhip, \Sussrem}).  
 
-For unitary evolution, the curve $S(T)$ therefore must drop back to $S=0$ at the end of evolution, also as sketched in \entropfig.  Indeed, Page\refs{\Pageinfo} has argued that, under certain assumptions, the curve turns over when the entropy of the radiation matches that of the black hole, roughly at the black hole half-life.
+For unitary evolution, the curve $S(T)$ therefore must drop back to $S=0$ at the end of evolution, also as sketched in \entropfig.  Indeed, Page \refs{\Pageinfo} has argued that, under certain assumptions, the curve turns over when the entropy of the radiation matches that of the black hole, roughly at the black hole half-life.
 
 While it has been argued in \refs{\QBHB} (see also \GiddingsSJ) that the nice slice description does not sharply approximate the correct $S(T)$ beyond $T\sim \calo(R S_{BH})$, which would resolve the actual ``paradox," an essential question is what mechanics leads to unitary evolution.  Such evolution seems not to be described by local quantum field theory.
 
@@ -961,9 +961,9 @@ followed by subspace transfer in a new basis:
 %
 (Here, we simplify notation from \subtrans.)  We refer to the transformation given by ${\hat U}$ as ``scrambling;" we might moreover assume it acts on a time-scale $T_{sc}\sim R$ or $\sim R\log R$ \refs{\HaPr,\SeSu,\Sufast} which is ``fast."  A sequence of such scrambling transformations, together with sufficient subspace transfer to continuously reduce dim$\hbh$, by imprinting information in outgoing states, can clearly accomplish the ultimate $S\rightarrow0$.
 
-Such a modification is clearly a large departure from LQFT nice-slice evolution; to quantify this, the scrambling time for Hawking evolution on nice slices is $T_{sc}=\infty$.  Another way to describe the large departure is provided by Hayden and Preskill\HaPr.  They show that if the internal black hole space evolves via such scrambling, then after sufficient time, additional information thrown into the black hole will accessible in the external state on the scrambling timescale -- black holes would behave as information {\it mirrors}.  
+Such a modification is clearly a large departure from LQFT nice-slice evolution; to quantify this, the scrambling time for Hawking evolution on nice slices is $T_{sc}=\infty$.  Another way to describe the large departure is provided by Hayden and Preskill \HaPr.  They show that if the internal black hole space evolves via such scrambling, then after sufficient time, additional information thrown into the black hole will accessible in the external state on the scrambling timescale -- black holes would behave as information {\it mirrors}.  
 
-Indeed, one quantitative characterization of candidate evolution laws is such a scrambling time.  While Hawking evolution predicts $T_{sc}=\infty$,  we have reviewed arguments\refs{\QBHB,\GiddingsSJ,\GiSl} that nice-slice evolution is not a good description past the timescale $\tbh\sim R S_{BH}$; also, Page's arguments regarding ``generic" (though subadditivity-saturating) evolution point to a similar timescale.  Scrambling faster than $T_{sc}\sim R\log R$ would produce a contradiction\refs{\STU}; {\it at} this  timescale evolution may minimally satisfy condition C, and permit an infalling description for time $R\log R$, though the associated statements of horizon complementarity appear at odds with condition C.\foot{For example, horizon complementarity posits that observables inside and outside the black hole are complementary variables analogously to $x$ and $p$ in quantum mechanics.  Note that such a picture may correspond to a particular choice of gauge, like that given by the Schwarzschild slicing.  If so, a more germane question is whether there is a gauge, for example like those based on nice or natural slices, permitting both an inside and outside description.  For further general discussion of gauge transformations, see sec.~five.}
+Indeed, one quantitative characterization of candidate evolution laws is such a scrambling time.  While Hawking evolution predicts $T_{sc}=\infty$,  we have reviewed arguments \refs{\QBHB,\GiddingsSJ,\GiSl} that nice-slice evolution is not a good description past the timescale $\tbh\sim R S_{BH}$; also, Page's arguments regarding ``generic" (though subadditivity-saturating) evolution point to a similar timescale.  Scrambling faster than $T_{sc}\sim R\log R$ would produce a contradiction\refs{\STU}; {\it at} this  timescale evolution may minimally satisfy condition C, and permit an infalling description for time $R\log R$, though the associated statements of horizon complementarity appear at odds with condition C.\foot{For example, horizon complementarity posits that observables inside and outside the black hole are complementary variables analogously to $x$ and $p$ in quantum mechanics.  Note that such a picture may correspond to a particular choice of gauge, like that given by the Schwarzschild slicing.  If so, a more germane question is whether there is a gauge, for example like those based on nice or natural slices, permitting both an inside and outside description.  For further general discussion of gauge transformations, see sec.~five.}
 
 
  But there is a large range of  timescales between $R\log R$ and $R S_{BH}$.  And, the latter  timescale for information return, if part of a consistent picture, is ``more conservative" in that it is closer to the value given by LQFT.
@@ -972,11 +972,11 @@ Indeed, one quantitative characterization of candidate evolution laws is such a 
 
  \Ifig{\Fig\MRevol}{Sketch of possible evolution of a massive remnant or fuzzball, in the Eddington-Finkelstein geometry of \EddFink.  An infalling observer following the arrow is expected to be disrupted upon impacting the surface.}{MRfig}{2}
 
-Another apparently less-conservative general scenario is that of massive remnants\refs{\BHMR}, or what seems to be a recent realization of it, the fuzzball scenario\refs{\fuzz}.  The basic picture here is that, due to unknown dynamics, the information inside the black hole ultimately expands to give an object with significant modification to the semiclassical geometry outside the would-be horizon, perhaps as sketched in \MRevol.  Propagation of the surface of such a remnant would be outside the light-cone, and in that sense non-local.  
+Another apparently less-conservative general scenario is that of massive remnants \refs{\BHMR}, or what seems to be a recent realization of it, the fuzzball scenario \refs{\fuzz}.  The basic picture here is that, due to unknown dynamics, the information inside the black hole ultimately expands to give an object with significant modification to the semiclassical geometry outside the would-be horizon, perhaps as sketched in \MRevol.  Propagation of the surface of such a remnant would be outside the light-cone, and in that sense non-local.  
 
 This scenario thus violates condition C.  A big modification of the geometry outside the horizon generically has a big effect on infalling observers.  An example with some possible similarity is a neutron star -- infalling observers rapidly scramble with the neutrons near their impact point, though not immediately with the entire star.
 
-The fuzzball scenario, if it can be realized for highly non-BPS objects like Schwarzschild black holes, would appear to fit into this category.  The reason is that this scenario is commonly described as accounting for the large information with a large class of geometries with significant departure from that of the black hole, outside the horizon.  A superposition of such geometries would appear to have a rapidly varying microstructure, and thus be very disruptive to infalling matter.\foot{One should note, however, attempts to avoid this conclusion\refs{\MaPl}.}
+The fuzzball scenario, if it can be realized for highly non-BPS objects like Schwarzschild black holes, would appear to fit into this category.  The reason is that this scenario is commonly described as accounting for the large information with a large class of geometries with significant departure from that of the black hole, outside the horizon.  A superposition of such geometries would appear to have a rapidly varying microstructure, and thus be very disruptive to infalling matter.\foot{One should note, however, attempts to avoid this conclusion \refs{\MaPl}.}
 
 Other apparently large departures from semiclassical evolution, {\it e.g.} \tHooftAA, might also be described in a similar fashion. Different evolution with significant deviation from LQFT appears in \Rozali.
 
@@ -1049,7 +1049,7 @@ up to trivial normalizations of the states. Here, we have split off a subspace c
 
 This may be extended to a more realistic model as follows.  Suppose that when a black hole forms, most of the degrees of freedom of $\hbh$ are in a fiducial ``vacuum" state, in accord with the statement that collapsing matter produces far fewer than $\exp\{S_{BH}\}$ black hole states.  In the qubit model, this could be described by most qubits being in state $\zhats$.  The small factor of $\hbh$ corresponding to excited degrees of freedom is associated with states of the infalling matter -- $\ohats$ in the qubit model.  Then, unitary evolution acts both to scramble the states on  timescale $T_{sc}$ and transfer the inside information out on  timescale $T_{tr}$.  The transfer might work as in \evoltwo, namely if an unexcited ($|{\hat 0}\rangle$) degree of freedom gets transferred out, it maps to the Hawking state of ${\widehat{\cal H}}_{\rm near}\otimes \hnear$, but excited degrees of freedom in $\hbh$ produce other, orthogonal, states.  Even a rapid scrambling time for $\hat U$ and short $T_{tr}$ is then expected to produce close to the Hawking state, for a very long time, $\sim R S_{BH}$.  Or, an alternative is that scrambling time is much longer (even $> RS_{BH}$), or that scrambling acts on a subset of $\hbh$, for example the first $S_{BH}/10$ bits.  Of course $T_{tr}$ can be long, but is bounded as $\roughly< R S_{BH}$ for each bit; ultimately one needs information tranfer rates $\roughly> 1/R$.  
 
-One expectation is that the generic such models produce an extra flux, beyond the (approximately) thermodynamic flux predicted by Hawking.  This can happen since generically the information transfer, \hawkmodt,  can populate modes that are not excited in the Hawking state, adding to its outward flux.  One example\ModelsU\ illustrating this phenomenon can be described in qubit language as 
+One expectation is that the generic such models produce an extra flux, beyond the (approximately) thermodynamic flux predicted by Hawking.  This can happen since generically the information transfer, \hawkmodt,  can populate modes that are not excited in the Hawking state, adding to its outward flux.  One example \ModelsU\ illustrating this phenomenon can be described in qubit language as 
 %
 \eqn\evolthree{ |\qhat_1\qhat_2\rangle \ahats \as \rightarrow \uhat \ahats\otimes \left(\zhats \zs+ e^{-\beta \omega/2} \ohats\os\right)\otimes|\zhat'\zhat''\rangle|q_1'q_2''\rangle\otimes U \as\ ,}
 %
@@ -1071,15 +1071,15 @@ In particular, as has been noted, if the information were transferred to modes w
 
 Such transferral represents a disruption of the Hawking state, but one that can be harmless.  In particular, roughly one bit needs to be transferred to the atmosphere per time $R$, if the black hole starts radiating information near its half-life.  In the preceding description, this alters a small number of modes -- of order one per time $R$ -- seen to be of energy $\sim 1/R$ by the infalling observer.  For a large black hole, such transfer rates to such low-energy quanta seems completely innocuous.  So, the single assumption that locality is modified apparently can avoid this kind of potential issue.
 
-One other potential concern is that information transferral outside the lightcone could lead to causality paradoxes.  In Minkowski space, spacelike communication can be converted into communication into the past, by a Lorentz transformation.  However, if the present phenomenon only arises in certain strongly-gravitating contexts, this is not necessarily an issue.  In particular, Lorentz boosts are not a symmetry of the Schwarzschild spacetime.  So, one cannot obviously convert such ``spacelike communication" into acausal propagation -- the overall picture can apparently remain causal\refs{\NLvC}.
+One other potential concern is that information transferral outside the lightcone could lead to causality paradoxes.  In Minkowski space, spacelike communication can be converted into communication into the past, by a Lorentz transformation.  However, if the present phenomenon only arises in certain strongly-gravitating contexts, this is not necessarily an issue.  In particular, Lorentz boosts are not a symmetry of the Schwarzschild spacetime.  So, one cannot obviously convert such ``spacelike communication" into acausal propagation -- the overall picture can apparently remain causal \refs{\NLvC}.
 
 
 \newsec{Towards a general framework: possible outlines of a nonlocal mechanics}
 
-Ultimately it is essential to have a clearer picture of an overarching framework describing the kinematics and mechanics of  such a theory with a modified notion of locality.  This paper explores the viewpoint that {\it the basic structure underlying physics is Hilbert space, not spacetime.}  A first question is how to formulate quantum mechanics sufficiently generally to describe physics in a situation where space and time are not necessarily part of the fundamental description, but are ``emergent."  This in particular means that one should not formulate physics in terms of sums over spacetime histories, as with  generalized quantum mechanics\refs{\HartGQM}.  Some basic postulates for a more general formulation of quantum mechanics are given in \refs{\UQM}.   
+Ultimately it is essential to have a clearer picture of an overarching framework describing the kinematics and mechanics of  such a theory with a modified notion of locality.  This paper explores the viewpoint that {\it the basic structure underlying physics is Hilbert space, not spacetime.}  A first question is how to formulate quantum mechanics sufficiently generally to describe physics in a situation where space and time are not necessarily part of the fundamental description, but are ``emergent."  This in particular means that one should not formulate physics in terms of sums over spacetime histories, as with  generalized quantum mechanics \refs{\HartGQM}.  Some basic postulates for a more general formulation of quantum mechanics are given in \refs{\UQM}.   
 
 Of course, more structure needs to be added to a Hilbert-space description in order to approximately recover spacetime and the dynamics of quantum fields in that spacetime.  As described above, one can see a possibly more fundamental origin of the notion of locality, or more precisely localization, in factorization of a Hilbert space into tensor factors describing different ``regions."  Then, the information that can be recovered about the resulting approximate geometry should be encoded in relationships between the factors; factors can be nested, like open sets in a geometry, or overlapping, producing a factor that corresponds to the intersection (\Tensfact).  
-Spacetime structure should thus be approximately reconstructed by the ``net" of interlocking tensor factors, and additional spacetime structure is not necessarily input at the beginning.  (Here, again, is one important difference from the approaches of algebraic quantum field theory\Haag, and holographic spacetime\BanksHST, which associate observable algebras or Hilbert spaces with pre-existing causal spacetime diamonds.)  For describing both this structure, and the spectrum of particles, one does need additional information about how the Hilbert spaces are labeled, and interconnected.
+Spacetime structure should thus be approximately reconstructed by the ``net" of interlocking tensor factors, and additional spacetime structure is not necessarily input at the beginning.  (Here, again, is one important difference from the approaches of algebraic quantum field theory \Haag, and holographic spacetime \BanksHST, which associate observable algebras or Hilbert spaces with pre-existing causal spacetime diamonds.)  For describing both this structure, and the spectrum of particles, one does need additional information about how the Hilbert spaces are labeled, and interconnected.
 
 Another important aspect of locality arises in evolution, namely locality limits how states in different regions, here tensor factors, can interact and communicate.  In the present approach to black holes, the conflict between locality and unitarity is assumed decisively resolved in favor of the former: unitarity rules.  Nonetheless, we expect to be able to describe approximately local QFT evolution in a wide range of contexts, and in particular all that are familiar to present experiment.  Correspondingly, one expects limitations on the unitary evolution.  Specifically, localization structure enters through Hilbert-space factorization, and evolution should appropriately respect this localization structure.
 Indeed, locality in LQFT states that signals don't propagate outside the light cone.  A central point of the current work is that this LQFT notion of locality needs to be modified in the strongly gravitating context, but is expected to hold in other contexts.  In Hilbert space language, it might be described in terms of the time required for evolution  to cause information to traverse ``across" a given tensor factor.  But more work is needed to understand constraints on such evolution, and in particular under what circumstances one recovers LQFT evolution in a correspondence limit.  We have just begun the exploration of possible evolution -- though in a nontrivial context where the clash between locality and unitarity is manifest.
